security cleanup / segault fix in currentOp SERVER-384